infrastructure/k8s/insights-api.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: insights-api-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: insights-api
  template:
    metadata:
      labels:
        app: insights-api
    spec:
      restartPolicy: Always
      containers:
        - name: insights-api
          image: joancanellasfontanilles/insights-api
---
apiVersion: v1
kind: Service
metadata:
  name: insights-api-cluster-ip
spec:
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
