infrastructure/k8s/insights-client.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: insights-client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: insights-client
  template:
    metadata:
      labels:
        app: insights-client
    spec:
      restartPolicy: Always
      containers:
        - name: insights-client
          image: joancanellasfontanilles/insights-client

---

apiVersion: v1
kind: Service
metadata:
  name: insights-client-cluster-ip
spec:
  selector:
    app: insights-client
  ports:
    - name: insights-client
      protocol: TCP
      port: 80
      targetPort: 80
