infrastructure/k8s/insights-db.ss.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: insights-db-ss
spec:
  serviceName: insights-db-ss
  replicas: 1
  selector:
    matchLabels:
      app: insights-db
  template:
    metadata:
      labels:
        app: insights-db
    spec:
      containers:
        - name: insights-db
          image: mysql
          volumeMounts:
            - name: db
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: db
      spec:
        accessModes: [ ReadWriteOnce ]
        resources:
          requests:
            storage: 1Gi

---

apiVersion: v1
kind: Service
metadata:
  name: insights-db-cluster-ip
spec:
  selector:
    app: insights-db
  ports:
    - name: db
      protocol: TCP
      port: 3306
      targetPort: 3306
